# xrootd-plugin

./: CMakeLists.txt  genversion.sh
cmake/: FindLIBCVMFS_CACHE.cmake  FindXRootD.cmake  cvmfsxrdcacheOSDefs.cmake
cmake/Modules/: FindLIBCVMFS_CACHE.cmake  FindXRootD.cmake
patch/: 0001-oss-rename-temprary-remove-check-on-existence.patch
src/: CMakeLists.txt  CvmfsCacheXrdVers.h.in  cvmfs_cache_xrd.cc  hash.h
